--- a/multimedia/media/media_js_standard/avplayeraudiondk/entry/src/ohosTest/module.json5
+++ b/multimedia/media/media_js_standard/avplayeraudiondk/entry/src/ohosTest/module.json5
@@ -20,8 +20,10 @@
     "description": "$string:module_test_desc",
     "mainElement": "TestAbility",
     "deviceTypes": [
-      "default",
-      "tablet"
+      "phone",
+      "tablet",
+      "2in1",
+      "wearable"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
