新增CreateModuleContext接口xts用例
Signed-off-by: feng_wei <feng_wei001@runkaihong.com.cn>

--- a/ability/ability_runtime/actsabilityamstest/BUILD.gn
+++ b/ability/ability_runtime/actsabilityamstest/BUILD.gn
@@ -20,7 +20,7 @@ group("ActsBackToCallerAbilityTest") {
       "actscreatemodulecontexttest:ActsBackToCallerAbilityHapTest",
       "actsapplicationhap:ActsApplicationHap",
       "actschildprocesshap:ActsChildProcessHap",
-      "actsentryhap:ActsEntryHap"
+      "actsentryhap:ActsEntryHap",
     ]
   }
 }
