--- a/ability/ability_runtime/actsabilityamstest/BUILD.gn
+++ b/ability/ability_runtime/actsabilityamstest/BUILD.gn
@@ -13,11 +13,11 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-group("ActsBackToCallerAbilityTest") {
+group("ActsAbilityAmsTest") {
   testonly = true
   if (is_standard_system) {
     deps = [
-      "actscreatemodulecontexttest:ActsBackToCallerAbilityHapTest",
+      "actscreatemodulecontexttest:ActsCreateModuleContextTest",
       "actsapplicationhap:ActsApplicationHap",
       "actschildprocesshap:ActsChildProcessHap",
       "actsentryhap:ActsEntryHap",
