feat：添加loctaion ndk用例
Signed-off-by: Chenhui Chu <734222381@qq.com>

--- a/location/BUILD.gn
+++ b/location/BUILD.gn
@@ -19,12 +19,14 @@ group("location") {
       "geolocation_errorCode:ActslocationErrorCodeTest",
       "geolocation_nop:ActslocationNopTest",
       "geolocation_standard:ActslocationJsTest",
+      "geolocation_capi:ActslocationCApiTest",
     ]
   } else {
     deps = [
       "geolocation_errorCode:ActslocationErrorCodeTest",
       "geolocation_nop:ActslocationNopTest",
       "geolocation_standard:ActslocationJsTest",
+      "geolocation_capi:ActslocationCApiTest",
     ]
   }
 }
