--- a/ability/ability_runtime/actsabilityamstest/actscreatemodulecontexttest/build-profile.json5
+++ b/ability/ability_runtime/actsabilityamstest/actscreatemodulecontexttest/build-profile.json5
@@ -38,7 +38,7 @@
   },
   "modules": [
     {
-      "name": "entry",
+      "name": "entry_test",
       "srcPath": "./entry",
       "targets": [
         {
