--- a/arkui/ace_ets_web_error_code/BUILD.gn
+++ b/arkui/ace_ets_web_error_code/BUILD.gn
@@ -13,30 +13,20 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-ohos_js_hap_suite("ActsAceWebErrorCodeTest") {
-  hap_profile = "entry/src/main/module.json"
-  js_build_mode = "debug"
-  deps = [
-    ":arkui_web_error_code_js_assets",
-    ":arkui_web_error_code_resources",
-  ]
-  ets2abc = true
-  certificate_profile = "signature/openharmony_sx.p7b"
+ohos_app_assist_suite("ActsAceWebErrorCodeTestMain") {
+  testonly = true
+  certificate_profile = "./signature/openharmony_sx.p7b"
+  hap_name = "ActsAceWebErrorCodeTestMain"
+  part_name = "ace_engine"
+  subsystem_name = "arkui"
+}
+
+ohos_js_app_suite("ActsAceWebErrorCodeTest") {
+  test_hap = true
+  testonly = true
+  certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsAceWebErrorCodeTest"
-  part_name = "webview"
-}
-
-ohos_app_scope("arkui_web_error_code_app_profile") {
-  app_profile = "AppScope/app.json"
-  sources = [ "AppScope/resources" ]
-}
-
-ohos_js_assets("arkui_web_error_code_js_assets") {
-  source_dir = "entry/src/main/ets"
-}
-
-ohos_resources("arkui_web_error_code_resources") {
-  sources = [ "entry/src/main/resources" ]
-  deps = [ ":arkui_web_error_code_app_profile" ]
-  hap_profile = "entry/src/main/module.json"
+  part_name = "ace_engine"
+  subsystem_name = "arkui"
+  deps = [ ":ActsAceWebErrorCodeTestMain" ]
 }
