--- a/multimedia/photoAccess/photoAccess/entry/src/main/cpp/BUILD.gn
+++ b/multimedia/photoAccess/photoAccess/entry/src/main/cpp/BUILD.gn
@@ -35,8 +35,8 @@ ohos_shared_library("mediaAssetManager") {
   sources = [ "./napi/mediaAssetManager.cpp" ]
   include_dirs = [
     "../cpp",
-    "${MEDIALIB_IMAGE_FRAMEWORK_PATH}/frameworks/kits/js/common/ndk/include/",
-    "${MEDIALIB_IMAGE_FRAMEWORK_PATH}/interfaces/kits/native/include/image",
+    "//foundation/multimedia/image_framework/frameworks/kits/js/common/ndk/include/",
+    "//foundation/multimedia/image_framework/interfaces/kits/native/include/image",
   ]
   configs = [ ":config" ]
 
@@ -61,8 +61,8 @@ ohos_shared_library("photoAccessHelperTest") {
   ]
   include_dirs = [
     "../cpp",
-    "${MEDIALIB_IMAGE_FRAMEWORK_PATH}/frameworks/kits/js/common/ndk/include/",
-    "${MEDIALIB_IMAGE_FRAMEWORK_PATH}/interfaces/kits/native/include/image",
+    "//foundation/multimedia/image_framework/frameworks/kits/js/common/ndk/include/",
+    "//foundation/multimedia/image_framework/interfaces/kits/native/include/image",
   ]
   configs = [ ":config" ]
 
