--- a/arkui/ace_ets_components_ux/BUILD.gn
+++ b/arkui/ace_ets_components_ux/BUILD.gn
@@ -32,6 +32,14 @@ group("componentUxTest") {
       "ace_ets_component_panel:ActsAcePanelTest",
       "ace_ets_component_patternlock:ActsAcePatternLockTest",
 
+      #"ace_ets_component_gauge:ActsAceGaugeTest",
+      #"ace_ets_component_grid:ActsAceGridTest",
+      #"ace_ets_component_indexer:ActsAlphabetIndexerTest",
+      #"ace_ets_component_list:ActsAceListTest",
+      #"ace_ets_component_menu:ActsAceMenuTest",
+      #"ace_ets_component_navigation:ActsAceNavigationTest",
+      #"ace_ets_component_panel:ActsAcePanelTest",
+      #"ace_ets_component_patternlock:ActsAcePatternLockTest",
       #"ace_ets_component_popup:ActsAcePopupTest",
       #"ace_ets_component_progress:ActsAceProgressTest",
       #"ace_ets_component_radio:ActsAceRadioTest",
