--- a/arkui/ace_ets_components_ux/ace_ets_component_popup/BUILD.gn
+++ b/arkui/ace_ets_components_ux/ace_ets_component_popup/BUILD.gn
@@ -13,31 +13,20 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-ohos_js_hap_suite("ActsAcePopupTest") {
-  hap_profile = "src/main/module.json"
-  js_build_mode = "debug"
-  deps = [
-    ":ace_ets_component_popup_js_assets",
-    ":ace_ets_component_popup_resources",
-  ]
-  ets2abc = true
-  certificate_profile = "signature/openharmony_sx.p7b"
-  hap_name = "ActsAcePopupTest"
+ohos_app_assist_suite("ActsAcePopupTestMain") {
+  testonly = true
+  certificate_profile = "./signature/openharmony_sx.p7b"
+  hap_name = "ActsAcePopupTestMain"
   part_name = "ace_engine"
   subsystem_name = "arkui"
 }
 
-ohos_app_scope("ace_ets_component_popup_profile") {
-  app_profile = "AppScope/app.json"
-  sources = [ "AppScope/resources" ]
-}
-
-ohos_js_assets("ace_ets_component_popup_js_assets") {
-  source_dir = "src/main/ets"
-}
-
-ohos_resources("ace_ets_component_popup_resources") {
-  sources = [ "src/main/resources" ]
-  deps = [ ":ace_ets_component_popup_profile" ]
-  hap_profile = "src/main/module.json"
+ohos_js_app_suite("ActsAcePopupTest") {
+  test_hap = true
+  testonly = true
+  certificate_profile = "./signature/openharmony_sx.p7b"
+  hap_name = "ActsAcePopupTest"
+  part_name = "ace_engine"
+  subsystem_name = "arkui"
+  deps = [ ":ActsAcePopupTestMain" ]
 }
