--- a/arkui/ace_ets_module_ui/BUILD.gn
+++ b/arkui/ace_ets_module_ui/BUILD.gn
@@ -18,6 +18,8 @@ group("ActsAceEtsModuleUITest") {
     "ace_ets_module_XNode:ActsAceEtsModuleXNodeTest",
     "ace_ets_module_advancedComponents:ActsAceEtsModuleAdvancedComponentsTest",
     "ace_ets_module_animation:ActsAceEtsModuleAnimationTest",
+    "ace_ets_module_checkbox:ActsAceEtsModuleCheckboxTest",
+    "ace_ets_module_checkboxGroup:ActsAceEtsModuleCheckboxGroupTest",
     "ace_ets_module_commonAttrsDialog:ActsAceEtsModuleCommonAttrsDialogTest",
     "ace_ets_module_commonAttrsEvents:ActsAceEtsModuleCommonAttrsEventsTest",
     "ace_ets_module_commonAttrsLayout:ActsAceEtsModuleCommonAttrsLayoutTest",
