--- a/global/global_stage/BUILD.gn
+++ b/global/global_stage/BUILD.gn
@@ -13,15 +13,31 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-ohos_js_app_suite("global_stage_hap") {
-  test_hap = true
-  testonly = true
-  certificate_profile = "./signature/openharmony_sx.p7b"
+ohos_js_hap_suite("global_stage_hap") {
+  hap_profile = "entry/src/main/module.json"
+  js_build_mode = "debug"
+  deps = [
+    ":global_stage_js_assets",
+    ":global_stage_resources",
+  ]
+  ets2abc = true
+  certificate_profile = "signature/openharmony_sx.p7b"
   hap_name = "ActsGlobalStageTest"
-
-  # 部件名称，真实数据，需要子系统对应
-  part_name = "resource_management"
-
-  # 子系统名称，真实数据，需要部件对应
   subsystem_name = "global"
+  part_name = "resource_management"
+}
+
+ohos_app_scope("global_stage_app_profile") {
+  app_profile = "AppScope/app.json"
+  sources = [ "AppScope/resources" ]
+}
+
+ohos_js_assets("global_stage_js_assets") {
+  source_dir = "entry/src/main/ets"
+}
+
+ohos_resources("global_stage_resources") {
+  sources = [ "entry/src/main/resources" ]
+  deps = [ ":global_stage_app_profile" ]
+  hap_profile = "entry/src/main/module.json"
 }
