--- a/global/global_stage/build-profile.json5
+++ b/global/global_stage/build-profile.json5
@@ -20,7 +20,9 @@
       {
         "name": "default",
         "signingConfig": "default",
-        "compatibleSdkVersion": "5.0.0(12)",
+        "compileSdkVersion": 12,
+        "compatibleSdkVersion": 12,
+        "targetSdkVersion": 12,
         "runtimeOS": "OpenHarmony",
       }
     ]
