--- a/telephony/networkmanager/http/netstack_http_nop/BUILD.gn
+++ b/telephony/networkmanager/http/netstack_http_nop/BUILD.gn
@@ -18,6 +18,6 @@ ohos_js_app_suite("ActsHttpNopStageTest") {
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsHttpNopStageTest"
-  subsystem_name = "communication"
-  part_name = "netstack"
+  subsystem_name = "telephony"
+  part_name = "http"
 }
