--- a/telephony/networkmanager/websocket/BUILD.gn
+++ b/telephony/networkmanager/websocket/BUILD.gn
@@ -14,19 +14,21 @@
 import("//build/ohos_var.gni")
 import("//test/xts/tool/build/suite.gni)
 
-group("websocket") {
-  testonly = true
-  deps = [ 
-  "websocketalltest:ActsNetworkMgrWebsocketTest"
-   ]
-}
-
 group("ndk") {
   testonly = true
   if (is_standard_system) {
     deps = [
-       "netstack_websocket:ActsNetStackWebsocketNdkTest"
+       "netstack_websocket:ActsNetStackWebsocketNdkTest",
     ]
   }
 }
+
+group("websocket") {
+  testonly = true
+  deps = [ 
+  "websocketalltest:ActsNetworkMgrWebsocketTest",
+   ]
+}
+
+
 
