--- a/multimedia/avsession/avsession_js_standard/AVSessionNDK/BUILD.gn
+++ b/multimedia/avsession/avsession_js_standard/AVSessionNDK/BUILD.gn
@@ -13,28 +13,28 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-ohos_app_assist_suite("demo_ndk_main") {
+ohos_app_assist_suite("avsession_ndk_main") {
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
-  hap_name = "ActsDemoMainTest"
+  hap_name = "ActsAVSessionNDKMainTest"
 
   # 部件名称，真实数据，需要子系统对应
-  part_name = "common"
+  part_name = "av_session"
 
   # 子系统名称，真实数据，需要部件对应
-  subsystem_name = "common"
+  subsystem_name = "multimedia"
 }
 
 ohos_js_app_suite("demo_ndk_ohosTest") {
   test_hap = true
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
-  hap_name = "ActsDemoNdkStageTest"
+  hap_name = "ActsOhAVSessionNDK"
 
   # 部件名称，真实数据，需要子系统对应
-  part_name = "common"
+  part_name = "av_session"
 
   # 子系统名称，真实数据，需要部件对应
-  subsystem_name = "common"
-  deps = [ ":demo_ndk_main" ]
+  subsystem_name = "multimedia"
+  deps = [ ":avsession_ndk_main" ]
 }
