--- a/telephony/networkmanager/ndk/BUILD.gn
+++ b/telephony/networkmanager/ndk/BUILD.gn
@@ -11,6 +11,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+import("//build/ohos_var.gni")
+
 group("ndk") {
   testonly = true
   if (is_standard_system) {
@@ -21,4 +23,3 @@ group("ndk") {
   }
 }
 
-import("//test/xts/tools/build/suite.gni")
