--- a/multimedia/avsession/avsession_js_standard/AVSessionNDK/BUILD.gn
+++ b/multimedia/avsession/avsession_js_standard/AVSessionNDK/BUILD.gn
@@ -16,28 +16,28 @@ import("//build/config/ohos/config.gni")
 import("//build/ohos.gni")
 import("//foundation/arkui/napi/napi.gni")
 
-ohos_app_assist_suite("audioDemo_ndk_hap_main") {
+ohos_app_assist_suite("avsessionDemo_ndk_hap_main") {
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
-  hap_name = "ActsAudioNapiEtsTestMain"
+  hap_name = "ActsAvsessionNapiEtsTestMain"
 
   # 部件名称，真实数据，需要子系统对应
-  part_name = "audio_framework"
+  part_name = "av_session"
 
   # 子系统名称，真实数据，需要部件对应
   subsystem_name = "multimedia"
 }
 
-ohos_js_app_suite("audioDemo_ndk_hap") {
+ohos_js_app_suite("avsessionDemo_ndk_hap") {
   test_hap = true
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
-  hap_name = "ActsAudioNapiEtsTest"
+  hap_name = "ActsAvsessionNapiEtsTest"
 
   # 部件名称，真实数据，需要子系统对应
-  part_name = "audio_framework"
+  part_name = "av_session"
 
   # 子系统名称，真实数据，需要部件对应
   subsystem_name = "multimedia"
-  deps = [ ":audioDemo_ndk_hap_main" ]
+  deps = [ ":avsessionDemo_ndk_hap_main" ]
 }
