--- a/telephony/networkmanager/ndk/BUILD.gn
+++ b/telephony/networkmanager/ndk/BUILD.gn
@@ -10,16 +10,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 import("//build/ohos_var.gni")
 
 group("ndk") {
   testonly = true
   if (is_standard_system) {
-    deps = [ 
-    "netstark_websocket:ActsNetStackWebSocketNDKTest",
-    "networkndk:ActsNetWorkMgrStackNDKTest",
-    ]
+    deps = [ "networkndk:ActsNetWorkMgrStackNDKTest" ]
   }
 }
-
