--- a/telephony/networkmanager/netstack_websocketndk/BUILD.gn
+++ b/telephony/networkmanager/netstack_websocketndk/BUILD.gn
@@ -10,14 +10,11 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 import("//build/ohos_var.gni")
 
 group("netstack_websocketndk") {
   testonly = true
   if (is_standard_system) {
-    deps = [ 
-    "netstark_websocket:ActsNetStackWebSocketNDKTest",
-    ]
+    deps = [ "netstark_websocket:ActsNetStackWebsocketNdkTest" ]
   }
 }
