--- a/telephony/telephonyjstest/netmanager_base/network_netmanager/network_netmanager_ndk/BUILD.gn
+++ b/telephony/telephonyjstest/netmanager_base/network_netmanager/network_netmanager_ndk/BUILD.gn
@@ -18,7 +18,7 @@ ohos_app_assist_suite("NetworkConnection_ndk_main") {
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsNetworkConnectionNDKMainTest"
   subsystem_name = "telephony"
-  part_name = "sms_mms"
+  part_name = "netmanager_networkconnection"
   js_build_mode = "debug"
 }
 
@@ -28,7 +28,7 @@ ohos_js_app_suite("ActsNetworkConnectionNDKNdkTest") {
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsNetworkConnectionNDKNdkTest"
   subsystem_name = "telephony"
-  part_name = "sms_mms"
+  part_name = "netmanager_networkconnection"
   js_build_mode = "debug"
   deps = [ ":NetworkConnection_ndk_main" ]
 }
