--- a/telephony/telephonyjstest/netmanager_base/BUILD.gn
+++ b/telephony/telephonyjstest/netmanager_base/BUILD.gn
@@ -19,11 +19,11 @@ group("netmanager_base") {
     deps = [
       "actshttpscertificatetest:ActsHttpsCertificateTest",
       "dns:ActsDNSTest",
-      "dnsndk:dnsndk",      
+      "dnsndk:dns_ndk",      
       "jshttp:ActsJSHTTPTest",
       "multicastconnection201_dns:ActsNetworkManagerMulDNS201Test",
       "multicastconnection_dns:ActsNetworkManagerMulDNSTest",
-      "network_netmanager:network_netmanager",      
+      "network_netmanager:network_netmanager_ndk",      
       "network_nopermission:ActsNetworkNopermissionTest",
       "network_nowifi:ActsNetworkNowifiTest",
       "network_wifi:ActsNetworkWifiTest",
