重新提交代码
Signed-off-by: songbaolin <3120230905@bit.edu.cn>

--- a/ability/ability_runtime/actsuiextensionexitreason/actsuiextensionexitreasontest/entry/src/ohosTest/module.json5
+++ b/ability/ability_runtime/actsuiextensionexitreason/actsuiextensionexitreasontest/entry/src/ohosTest/module.json5
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 Huawei Device Co., Ltd.
+ * Copyright (c) 2024 Huawei Device Co., Ltd.
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
@@ -12,6 +12,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 {
   "module": {
     "name": "entry_test",
@@ -19,13 +20,14 @@
     "description": "$string:module_test_desc",
     "mainElement": "TestAbility",
     "deviceTypes": [
-      "default",
       "tablet",
-      "wearable"
+      "default",
+      "phone",
+      "2in1"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
-    "pages": "$profile:test_pages",
+    "pages": "$profile:main_pages",
     "abilities": [
       {
         "name": "TestAbility",
