--- a/global/global_stage/entry/src/main/module.json5
+++ b/global/global_stage/entry/src/main/module.json5
@@ -19,8 +19,11 @@
     "description": "$string:module_desc",
     "mainElement": "EntryAbility",
     "deviceTypes": [
+      "wearable",
       "default",
-      "tablet"
+      "phone",
+      "tablet",
+      "2in1"
     ],
     "deliveryWithInstall": true,
     "installationFree": false,
