--- a/telephony/networkmanager/netstack_websocket/netstack_websocketndk/BUILD.gn
+++ b/telephony/networkmanager/netstack_websocket/netstack_websocketndk/BUILD.gn
@@ -18,7 +18,7 @@ ohos_app_assist_suite("ActsNetstackWebsocket_ndk_main") {
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsNetStackWebsocketNDKMainTest"
   subsystem_name = "telephony"
-  part_name = "netstack_websocketndk"
+  part_name = "sms_mms"
   js_build_mode = "debug"
 }
 
@@ -28,7 +28,7 @@ ohos_js_app_suite("ActsNetStackWebsocketNdkTest") {
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsNetStackWebsocketNdkTest"
   subsystem_name = "telephony"
-  part_name = "netstack_websocketndk"
+  part_name = "sms_mms"
   js_build_mode = "debug"
   deps = [ ":ActsNetstackWebsocket_ndk_main" ]
 }
