--- a/hiviewdfx/hiappeventtest/hiappeventndktest/BUILD.gn
+++ b/hiviewdfx/hiappeventtest/hiappeventndktest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2024 Huawei Device Co., Ltd.
+# Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -16,7 +16,7 @@ import("//test/xts/tools/build/suite.gni")
 ohos_app_assist_suite("demoIdna_ndk_main") {
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
-  hap_name = "ActsHiappeventNdkOtherTest"
+  hap_name = "ActsHiappeventNdkTest"
   subsystem_name = "hiviewdfx"
   part_name = "hiappevent"
 }
