--- a/ability/ability_runtime/actsresponseglobalparamupdatetest/actsresponseglobalparamupdaterelyd/BUILD.gn
+++ b/ability/ability_runtime/actsresponseglobalparamupdatetest/actsresponseglobalparamupdaterelyd/BUILD.gn
@@ -13,11 +13,14 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-ohos_app_assist_suite("ActsResponseGlobalParamUpdateRelyD") {
+ohos_js_app_suite("ActsResponseGlobalParamUpdateRelyD") {
   testonly = true
-  certificate_profile = "signature/openharmony_sx.p7b"
+  certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsResponseGlobalParamUpdateRelyD"
-  subsystem_name = "ability"
-  part_name = "ability_runtime"
-}
 
+  # 部件名称，真实数据，需要子系统对应
+  part_name = "ability_runtime"
+
+  # 子系统名称，真实数据，需要部件对应
+  subsystem_name = "ability"
+}
