--- a/telephony/telephonyjstest/netmanager_base/network_netmanager/network_netmanagerndk/BUILD.gn
+++ b/telephony/telephonyjstest/netmanager_base/network_netmanager/network_netmanagerndk/BUILD.gn
@@ -18,7 +18,7 @@ ohos_app_assist_suite("NetworkConnection_ndk_main") {
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsNetworkConnectionNdkMainTest"
   subsystem_name = "telephony"
-  part_name = "network_netmanagerndk"
+  part_name = "sms_mms"
   js_build_mode = "debug"
 }
 
@@ -28,7 +28,7 @@ ohos_js_app_suite("ActsNetworkConnectionNdkTest") {
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsNetworkConnectionNdkTest"
   subsystem_name = "telephony"
-  part_name = "network_netmanagerndk"
+  part_name = "sms_mms"
   js_build_mode = "debug"
   deps = [ ":NetworkConnection_ndk_main" ]
 }
