--- a/telephony/telephonyjstest/netmanager_base/BUILD.gn
+++ b/telephony/telephonyjstest/netmanager_base/BUILD.gn
@@ -12,6 +12,7 @@
 # limitations under the License.
 
 import("//build/ohos_var.gni")
+import("//test/xts/tools/build/suite.gni")
 
 group("netmanager_base") {
   testonly = true
