--- a/telephony/telephonyjstest/netmanager_base/dnsndk/BUILD.gn
+++ b/telephony/telephonyjstest/netmanager_base/dnsndk/BUILD.gn
@@ -13,7 +13,7 @@
 import("//build/ohos_var.gni")
 import("//test/xts/tools/build/suite.gni")
 
-group("dnsndk") {
+group("dns_ndk") {
   testonly = true
   if (is_standard_system) {
     deps = [ "dns_ndk:ActsDnsNdkTest" ]
