--- a/telephony/telephonyjstest/netmanager_base/network_netmanager/BUILD.gn
+++ b/telephony/telephonyjstest/netmanager_base/network_netmanager/BUILD.gn
@@ -13,7 +13,7 @@
 import("//build/ohos_var.gni")
 import("//test/xts/tools/build/suite.gni")
 
-group("network_netmanager") {
+group("network_netmanagerndk") {
   testonly = true
   if (is_standard_system) {
     deps = [ "network_netmanagerndk:ActsNetworkConnectionNdkTest" ]
