--- a/ability/crossplatform/ability_runtime/ActsCrossplatformStartAbilityTest/entry/build-profile.json5
+++ b/ability/crossplatform/ability_runtime/ActsCrossplatformStartAbilityTest/entry/build-profile.json5
@@ -13,7 +13,14 @@
  * limitations under the License.
  */
 
-import StartAbilityTest from "./StartAbility.test";
-export default function testsuite() {
-  StartAbilityTest();
+{
+  "apiType": 'stageMode',
+  "targets": [
+    {
+      "name": "default",
+    },
+    {
+      "name": "ohosTest",
+    }
+  ]
 }
