--- a/arkui/ace_c_arkui_test/entry/src/main/cpp/CMakeLists.txt
+++ b/arkui/ace_c_arkui_test/entry/src/main/cpp/CMakeLists.txt
@@ -106,6 +106,7 @@ add_library(nativerender SHARED
     text/text_CustomSpan_test.cpp
     system/system_ColorFontChange_test.cpp
     text/text_imageSpan_test.cpp
+	text/text_span_test.cpp
 )
 
 add_library(nativefunc SHARED
