--- a/ability/ability_runtime/actsresponseglobalparamupdatetest/actsresponseglobalparamupdaterelyd/BUILD.gn
+++ b/ability/ability_runtime/actsresponseglobalparamupdatetest/actsresponseglobalparamupdaterelyd/BUILD.gn
@@ -13,7 +13,7 @@
 
 import("//test/xts/tools/build/suite.gni")
 
-ohos_js_app_suite("ActsResponseGlobalParamUpdateRelyD") {
+ohos_app_assist_suite("ActsResponseGlobalParamUpdateRelyD") {
   testonly = true
   certificate_profile = "./signature/openharmony_sx.p7b"
   hap_name = "ActsResponseGlobalParamUpdateRelyD"
