--- a/arkui/ace_ets_components_ux/BUILD.gn
+++ b/arkui/ace_ets_components_ux/BUILD.gn
@@ -36,10 +36,10 @@ group("componentUxTest") {
       #"ace_ets_component_progress:ActsAceProgressTest",
       #"ace_ets_component_radio:ActsAceRadioTest",
       #"ace_ets_component_search:ActsAceSearchTest",
-      "ace_ets_component_segmentbutton:ActsAceSegmentButtonTest",
-      "ace_ets_component_select:ActsAceSelectTest",
+      #"ace_ets_component_segmentbutton:ActsAceSegmentButtonTest",
+      #"ace_ets_component_select:ActsAceSelectTest",
       #"ace_ets_component_sidebar:ActsAceSideBarTest",
-      "ace_ets_component_slider:ActsAceSliderTest",
+      #"ace_ets_component_slider:ActsAceSliderTest",
       #"ace_ets_component_swiper:ActsAceSwiperTest",
       #"ace_ets_component_tabs:ActsAceTabsTest",
       #"ace_ets_component_text:ActsAceTextTest",
