--- a/ability/ability_runtime/actsabilityamstest/appclonedemo/AppScope/app.json5
+++ b/ability/ability_runtime/actsabilityamstest/appclonedemo/AppScope/app.json5
@@ -20,6 +20,10 @@
     "versionCode": 1000000,
     "versionName": "1.0.0",
     "icon": "$media:app_icon",
-    "label": "$string:app_name"
+    "label": "$string:app_name",
+	"multiAppMode": {
+      "maxCount": 5,
+      "multiAppModeType": "appClone",
+    }
   }
 }
