--- a/ability/crossplatform/ability_runtime/ActsCrossplatformPromiseTest/entry/src/main/module.json5
+++ b/ability/crossplatform/ability_runtime/ActsCrossplatformPromiseTest/entry/src/main/module.json5
@@ -14,7 +14,7 @@
  */
 {
   "module": {
-    "name": "entry",
+    "name": "entry_test",
     "type": "entry",
     "description": "$string:module_test_desc",
     "mainElement": "EntryAbility",
