--- a/ability/crossplatform/ability_runtime/ActsCrossplatformStartAbilityTest/entry/src/ohosTest/module.json5
+++ b/ability/crossplatform/ability_runtime/ActsCrossplatformStartAbilityTest/entry/src/ohosTest/module.json5
@@ -15,7 +15,7 @@
 
 {
   "module": {
-    "name": "entry_test",
+    "name": "entry",
     "type": "feature",
     "description": "$string:module_test_desc",
     "mainElement": "TestAbility",
@@ -51,7 +51,7 @@
       },
       {
         "name": "MainAbility",
-        "srcEntrance": "./ets/mainability/MainAbility.ts",
+        "srcEntry": "./ets/mainability/MainAbility.ts",
         "description": "$string:MainAbility_desc",
         "icon": "$media:icon",
         "label": "$string:MainAbility_label",
@@ -61,7 +61,7 @@
       },
       {
         "name": "Main2Ability",
-        "srcEntrance": "./ets/Main2Ability/Main2Ability.ts",
+        "srcEntry": "./ets/Main2Ability/Main2Ability.ts",
         "description": "$string:Main2Ability_desc",
         "icon": "$media:icon",
         "label": "$string:Main2Ability_label",
