edm testextensionability 切hivigor
Change-Id: Ib7ec4a5b9eef95843479ec0e4f103f0a539a9c97
Signed-off-by: huangxiao <1286409928@qq.com>

--- a/customization/enterprise_device_management/TestExtensionAbility_001/build-profile.json5
+++ b/customization/enterprise_device_management/TestExtensionAbility_001/build-profile.json5
@@ -12,6 +12,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 {
   "app": {
     "signingConfigs": [
@@ -22,12 +23,14 @@
         "signingConfig": "default",
         "compileSdkVersion": 12,
         "compatibleSdkVersion": 12,
+        "targetSdkVersion": 12,
+        "runtimeOS": "OpenHarmony",
       }
     ]
   },
   "modules": [
     {
-      "name": "entry",
+      "name": "phone",
       "srcPath": "./entry",
       "targets": [
         {
