--- a/customization/enterprise_device_management/TestExtensionAbility_001/entry/build-profile.json5
+++ b/customization/enterprise_device_management/TestExtensionAbility_001/entry/build-profile.json5
@@ -12,31 +12,16 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 {
-  "app": {
-    "signingConfigs": [
-    ],
-    "products": [
-      {
-        "name": "default",
-        "signingConfig": "default",
-        "compileSdkVersion": 12,
-        "compatibleSdkVersion": 12,
-      }
-    ]
-  },
-  "modules": [
+  "apiType": 'stageMode',
+  "targets": [
     {
-      "name": "entry",
-      "srcPath": "./entry",
-      "targets": [
-        {
-          "name": "default",
-          "applyToProducts": [
-            "default"
-          ]
-        }
-      ]
+      "name": "phone",
+      "runtimeOS": "OpenHarmony"
+    },
+    {
+      "name": "ohosTest",
     }
   ]
 }
