--- a/customization/enterprise_device_management/TestExtensionAbility_001/AppScope/app.json5
+++ b/customization/enterprise_device_management/TestExtensionAbility_001/AppScope/app.json5
@@ -12,31 +12,20 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 {
   "app": {
-    "signingConfigs": [
-    ],
-    "products": [
-      {
-        "name": "default",
-        "signingConfig": "default",
-        "compileSdkVersion": 12,
-        "compatibleSdkVersion": 12,
-      }
-    ]
-  },
-  "modules": [
-    {
-      "name": "entry",
-      "srcPath": "./entry",
-      "targets": [
-        {
-          "name": "default",
-          "applyToProducts": [
-            "default"
-          ]
-        }
-      ]
-    }
-  ]
+    "bundleName": "com.example.myapplication",
+    "vendor": "huawei",
+    "versionCode": 1000000,
+    "versionName": "1.0.0",
+    "debug": false,
+    "icon": "$media:icon",
+    "label": "$string:app_name",
+    "description": "$string:description_application",
+    "distributedNotificationEnabled": true,
+    "keepAlive": true,
+    "minAPIVersion": 9,
+    "targetAPIVersion": 9
+  }
 }
