--- a/customization/enterprise_device_management/TestExtensionAbility_001/entry/oh-package.json5
+++ b/customization/enterprise_device_management/TestExtensionAbility_001/entry/oh-package.json5
@@ -12,31 +12,13 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 {
-  "app": {
-    "signingConfigs": [
-    ],
-    "products": [
-      {
-        "name": "default",
-        "signingConfig": "default",
-        "compileSdkVersion": 12,
-        "compatibleSdkVersion": 12,
-      }
-    ]
-  },
-  "modules": [
-    {
-      "name": "entry",
-      "srcPath": "./entry",
-      "targets": [
-        {
-          "name": "default",
-          "applyToProducts": [
-            "default"
-          ]
-        }
-      ]
-    }
-  ]
+  "license": "",
+  "author": "",
+  "name": "entry",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "version": "1.0.0",
+  "dependencies": {}
 }
