--- a/customization/enterprise_device_management/edm_xts_stage/AppScope/app.json5
+++ b/customization/enterprise_device_management/edm_xts_stage/AppScope/app.json5
@@ -21,7 +21,7 @@
     "debug": false,
     "icon": "$media:icon",
     "label": "$string:app_name",
-    "description": "description",
+    "description": "description_application",
     "distributedNotificationEnabled": true,
     "keepAlive": true,
     "minAPIVersion": 9,
