add iot validator acts valadata Signed-off-by: liuhaohao123 <850266757@qq.com>

--- a/validator/acts_validator/entry/oh-package.json5
+++ b/validator/acts_validator/entry/oh-package.json5
@@ -19,6 +19,8 @@
   "main": "",
   "author": "",
   "license": "",
-  "dependencies": {}
+  "dependencies": {
+    '@ohos/IoTConnectKit': "file:./lib/IotLibrary.har"
+  }
 }
 
