add multi instance xts
Signed-off-by: yuwenze <yuwenze1@huawei.com>
Change-Id: I051c2b1e4e9a7eadd8c6b1140e5adbe9865b52c2

--- a/ability/ability_runtime/BUILD.gn
+++ b/ability/ability_runtime/BUILD.gn
@@ -88,6 +88,7 @@ group("ability_runtime") {
       "faapicover:faapicover",
       "featureability:featureability",
       "freeinstalltest:freeinstalltest",
+      "multiinstance:multiinstancetest",
       "newwant:newwant",
       "registerjserror:registerjserror",
       "shareextensionability:actsshareextensionability",
