--- a/multimedia/BUILD.gn
+++ b/multimedia/BUILD.gn
@@ -51,6 +51,7 @@ group("multimedia") {
       "avsession/avsession_js_standard/avsessionVoiceCall:avsession_voicecall_js_hap",
       "avsession/avsession_ndk_standard/avsession_ndk_stage:avsession_ndk_ohosTest",
       "avsource:ActsAVCodecTest",
+      "camera/camera_ets_standard:ActsCameraETSTest",
       "camera/camera_js_standard:camera_framework_ets_hap",
       "camera/camera_ndk_test:camera_framework_ndk_hap",
       "camera/camera_ndk_xts/OHCameraNdk:ActsMediaCameraNDKTest",
