--- a/global/i18n_standard/intljs/entry/src/main/config.json
+++ b/global/i18n_standard/intljs/entry/src/main/config.json
@@ -13,7 +13,10 @@
     "name": ".entry",
     "deviceType": [
       "tablet",
-      "default"
+      "default",
+      "phone",
+      "2in1",
+      "wearable"
     ],
     "distro": {
       "deliveryWithInstall": true,
