--- a/global/resmgr_standard/resmgrjs/entry/src/ohosTest/config.json
+++ b/global/resmgr_standard/resmgrjs/entry/src/ohosTest/config.json
@@ -13,7 +13,10 @@
     "name": ".entry_test",
     "deviceType": [
       "tablet",
-      "default"
+      "default",
+      "phone",
+      "2in1",
+      "wearable"
     ],
     "distro": {
       "deliveryWithInstall": true,
